Preliminary completion of orders service